Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_FailedRequest__c/SOM_FailedRequest__c.object-meta.xml
<CustomObject>
    <label>Failed Request</label>
    <nameField>
        <label>Failed Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Failed Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>