Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_FailedRequest__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Stores the request body as JSON.</description>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>