Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_FailedRequest__c/fields/IsRetryAttemptLimitReached__c.field-meta.xml
<CustomField>
    <fullName>IsRetryAttemptLimitReached__c</fullName>
    <description>Calculates the result by subtracting the retry count from the retry limit.

While attempt is less than limit, the result will be false and will be retried again. Once it reaches, the result will be true and will be excluded from SOQL.

attempt &lt; limit ? false: true</description>
    <formula>RetryAttemptLimit__c -  RetryAttempts__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retry Attempt Limit Reached</label>
    <type>Checkbox</type>
</CustomField>