Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_FailedRequest__c/fields/RegenerateData__c.field-meta.xml
<CustomField>
    <fullName>RegenerateData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the request body will be regenerated. 

(If true, Data field will be noneffective)</description>
    <label>Regenerate Data</label>
    <type>Checkbox</type>
</CustomField>