Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_FailedRequest__c/fields/RegenerateDataParameter__c.field-meta.xml
<CustomField>
    <fullName>RegenerateDataParameter__c</fullName>
    <description>Stores the parameter for retry data.</description>
    <label>Regenerate Data Parameter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>