Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_FailedRequest__c/fields/RetryAttemptLimit__c.field-meta.xml
<CustomField>
    <fullName>RetryAttemptLimit__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Indicates the limit for retry attempts.</description>
    <label>Retry Attempt Limit</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>