Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_FailedRequest__c/fields/RetryAttempts__c.field-meta.xml
<CustomField>
    <fullName>RetryAttempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the number of retry attempts.</description>
    <label>Retry Attempts</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>