Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_FailedRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the retry object.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT STARTED</fullName>
                <default>true</default>
                <label>NOT STARTED</label>
            </value>
            <value>
                <fullName>IN PROGRESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>